# python-mwviews

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py  utility
mwviews/: mwviews.py  page_view_count.py
mwviews/api/: __init__.py  pageviews.py
mwviews/utilities/: aggregate.py  fetch_global_namespaces.py
src/mwviews/: page_view_count.py
src/mwviews/api/: pageviews.py
src/mwviews/utilities/: fetch_global_namespaces.py  util.py
