[metadata]
description-file = README.md

[flake8]
# W293: whitespace on blank lines is ok
# F401: sometimes you want to import stuff but not use it (eg. celery)
# E221: sometimes it makes more readable code if you can align a series of statements
# E203: sometimes it makes more readable code if you can align a series of statements
# E711: there are valid reasons to do column != None in SQL Alchemy
ignore = W293,F401,E221,E203,E711
# line lengths should be limited but not to 80
max-line-length = 90
exclude = .venv,.tox,dist,doc,build,*.egg
