[metadata]
name = mwviews
version = 0.2.1
author = Dan Andreescu
author_email = dandreescu@wikimedia.org
description = Tools for parsing and querying Wikimedia Foundation pageview data, from both static dumps and online API
description-file = README.md
license = MIT
url = https://github.com/mediawiki-utilities/python-mwviews
keywords = gwikimedia, wikipedia, pageview, api

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    requests
    more_itertools
    docopt
    mwcli
    mwapi

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mwviews = mwviews.mwviews:main

[flake8]
# W293: whitespace on blank lines is ok
# F401: sometimes you want to import stuff but not use it (eg. celery)
# E221: sometimes it makes more readable code if you can align a series of statements
# E203: sometimes it makes more readable code if you can align a series of statements
# E711: there are valid reasons to do column != None in SQL Alchemy
ignore = W293,F401,E221,E203,E711
# line lengths should be limited but not to 80
max-line-length = 90
exclude = .venv,.tox,dist,doc,build,*.egg
